# nerve-gui

./: README.md  org.snigdhaos.nervegui.json  org.snigdhaos.nervegui.yml
data/: meson.build  org.snigdhaos.nervegui.appdata.xml.in  org.snigdhaos.nervegui.desktop.in  org.snigdhaos.nervegui.gschema.xml
data/icons/: meson.build
nerve_gui/: window.py
nerve_gui/classes/: install_prefs.py  meson.build  nerve_screen.py  snigdhaos_installer_screen.py
nerve_gui/functions/: browser_screen.py  desktop_screen.py  displamanager_screen.py  finished_screen.py  ide_screen.py  install_screen.py
nerve_gui/locales/: africa.py
nerve_gui/scripts/: install.sh
snigdhaos_installer_gui/: about.ui  main.py  window.py
snigdhaos_installer_gui/classes/: install_prefs.py  meson.build
snigdhaos_installer_gui/functions/: desktop_screen.py  ide_screen.py
snigdhaos_installer_gui/locales/: america.py  antarctica.py  arctic.py  asia.py
